[package]
name = "async-criterion"
version = "0.1.0"
authors = ["neonphog <neonphog@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
criterion = "0.3"
futures = "0.3"
num_cpus = "1"
once_cell = "1"

[[bench]]
name = "my_benchmark"
harness = false
